@@ -550,7 +550,7 @@ ags_core_audio_server_get_property(GObject *gobject,
     {
       pthread_mutex_lock(core_audio_server_mutex);
 
-      g_value_set_object(value, core_audio_server->default_soundcard);
+      g_value_set_object(value, core_audio_server->default_client);
 
       pthread_mutex_unlock(core_audio_server_mutex);
     }
